# aCG

./: .clangd  .gitignore  install_note.md
acg/: acg_nvshmem.cu  acg_nvshmem.h  cgcuda.c  comm.c
cmake/: FindGKLIB.cmake
cuda/: CMakeLists.txt  acg-cuda.c
hip/: CMakeLists.txt
matrices_generator/: poisson.py
mtx2bin/: CMakeLists.txt
mtxpartition/: CMakeLists.txt
scripts/: mpi_combined.sh  mpi_pipelined.sh  nccl_combined.sh  nccl_pipelined.sh  nvshmem_combined.sh  nvshmem_pipelined.sh  trace_mpi.sh  trace_nvshmem.sh
